[tool.poetry]
name = "sensor901"
version = "0.0.1"
description = ""
authors = ["Sheng Fan <fredtools999@gmail.com>"]
license = "unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
